axum-macros/tests/from_request/fail/rejection_derive_and_via.stderr
error: cannot use both `rejection_derive` and `via`
 --> tests/from_request/fail/rejection_derive_and_via.rs:5:42
  |
5 | #[from_request(rejection_derive(!Error), via(Extension))]
  |                                          ^^^

warning: unused import: `axum::extract::Extension`
 --> tests/from_request/fail/rejection_derive_and_via.rs:2:5
  |
2 | use axum::extract::Extension;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
